# os_project

./: Cargo.toml  x86_64-os_project.json
.cargo/: config.toml
src/: main.rs  vga_buffer.rs
